src/app.scss
@charset 'utf-8';

@import "./styles/mixins.scss";
@import "./styles/base.scss";
@import "./styles/fonts.scss";

@import '~vertical-rhythm-reset/dist/vertical-rhythm-reset';
@import "~sass-easing/_easings";

@include vr-reset();

// Typefaces
$font-family: 'Muli', sans-serif;
$heading-font-family: 'Merriweather', serif;

// Text Colors
$text-color: #333;
$heading-color: #000;


.animated {
  transform: translateZ(0);
  will-change: transform;
}

img {
  -webkit-backface-visibility: hidden;
}

// Colors
$orange: #DE7719;
$blue: complement($orange);
$red: adjust-hue($orange, -45deg);
$yellow: adjust-hue($orange, 25deg);
$teal: adjust-hue($orange, -270deg);
$purple: adjust-hue($orange, -90deg);

body {
  min-width: 320px;
  font-family: $font-family;
  background: #F7F7F7 url('/assets/images/80-70-3.png');
  overscroll-behavior: none;
  color: $text-color;
}


div.container {
  display: flex;
  flex-direction: column;
  min-height: calc(100vh);

  &:before, &:after {
    display: block;
    content: "";
    position: absolute;
    top: 0px;
    left: 0;
    width: 100%;
    height: 9px;
  }
  &:before {
    background: $orange;
  }
  &:after {
    top: -9px;
    box-shadow: 0px 0px 9px rgba(0,0,0,0.4);
    z-index: 100;
  }
}

section {
  @include vr(
    $padding-top: 1.5,
    $padding-bottom: 1.5
  );

  @include width-above($desktop) {
    @include vr(
      $padding-top: 2,
      $padding-bottom: 2
    );
  }

  &.black {
    color: rgba(#fff, 0.95);
    background: #363636 url('/assets/images/80-70-3.png');
    border-top: 1px solid rgba(#000, 0.05);
    @include vr(
      $offset-top: 1px
    );
  }
  &.green {
    color: rgba(#fff, 0.95);
    background: darken(#20BA73, 5) url('/assets/images/80-70-3.png');
  }
  &.bytemark {
    color: #fff;
    background: #004ea4 url('/assets/images/80-70-4.png');
    border-top: 1px solid rgba(#000, 0.5);
    @include vr(
      $offset-top: 1px
    );
  }
}

a {
  color: $orange;
  &:hover {
    color: darken($orange, 10);
  }
}

.grid-wrapper {
  max-width: 58rem;
  margin: 0 auto;
  @include vr(
    $padding-left: 1,
    $padding-right: 1
  );
}

h1, h2, h3, h4, h5 {
  font-family: $heading-font-family;
  font-weight: 400;
}

@import "./styles/header.scss";
@import "./styles/footer.scss";
@import "./styles/resume.scss";
@import "./styles/work.scss";
@import "./styles/window.scss";
@import "./styles/about.scss";
@import "./styles/skills.scss";

// extenders
.animateButton {
  transition: all 0.25s $easeOutCubic;
}

.button {
  display: inline-block;
  background: rgba(#fff, 0.01);
  color: $text-color;
  border-radius: 11px;
  text-decoration: none;
  border: 2px solid rgba(#333, 0.4);
  box-shadow: 3px 3px 3px 0px rgba(#000, 0.05);
  font-weight: 400;
  overflow: hidden;
  -webkit-background-clip: padding-box;
  @include vr(
    $height: 2,
    $line-height: 2,
    $padding-left: 1,
    $padding-right: 1,
    $offset-top: 2px,
    $offset-bottom: 2px
  );
  @extend .animateButton;

  .inverse & {
    box-shadow: 3px 3px 3px 0px rgba(#000, 0.1);
    background: rgba(#fff, 0.01);
    border-color: rgba(#fff, 0.5);
    color: #fff;
  }

  &:before,
  &:after {
    content: '';
    width: 0;
    height: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    z-index: -1;
    @extend .animateButton;
    background-color: saturate($orange, 0);
  }
  
  &:before {
    left: 50%;
  }
  
  &:after {
    right: 50%;
  }
  
  &:hover {
    border-color: saturate($orange, 0);
    border-top-color: lighten($orange, 10);
    border-left-color: lighten($orange, 10);
    color: #fff;
    box-shadow: 3px 3px 10px 0px rgba(#000, 0.2);

    &:before,
    &:after {
      width: 52%;
      opacity: 1;
    }
  }

}

@media print {
  header, footer {
    display: none !important;
  }
  body {
    background: transparent !important;
  }

  div.container:before, .container:after {
    display: none !important;
  }
  .resume {
    margin: 0 !important;
    padding: 0 !important;
    background: #fff !important;
  }

  .resume h3 {
    font-size: 24px;
  }
  .resume h4 {
    font-size: 17px;
  }
  .resume h5 {
    font-size: 17px !important;
  }

  .resume ul {
    font-size: 15.5px;
    margin-left: -1rem !important;
    margin-right: 0 !important;
  }

  strong {
    font-weight: normal;
    color: #000;
  }

  .resume a {
    color: #000;
  }

  .grid-wrapper {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
  .resume__document {
    padding-left: 1.5rem !important;
    padding-right: 1.5rem !important;
    border-top: 8px solid $orange;
    box-shadow: none !important;
  }

}

